@@ -1,1 +1,0 @@
-SIP bindings for C and C++ libraries (PyQt4 version)
